Fix cell alignment

--- a/app/styles/log.scss
+++ b/app/styles/log.scss
@@ -1,3 +1,17 @@
+md-table-container.posts {
+  table {
+    td.md-cell {
+      &.meta, &.controls {
+        &:nth-child(n) {
+          vertical-align: top;
+          padding-top: 1em;
+          padding-bottom: 1em;
+        }
+      }
+    }
+  }
+}
+
 .mobiledoc-toolbar {
   padding: 0;
 
